chore: prepare v2.0.0 release
